Cut new version with FHICLCPP improvements and built against BOOST v1_45_0

--- a/messagefacility/MessageLogger/CMakeLists.txt
+++ b/messagefacility/MessageLogger/CMakeLists.txt
@@ -7,7 +7,7 @@
 
 FILE (GLOB srcFiles *.cc )
 
-LINK_LIBRARIES ( Utilities )
+LINK_LIBRARIES ( Utilities ${FHICLCPP} )
 
 ADD_LIBRARY (MessageLogger SHARED ${srcFiles})
 ADD_LIBRARY (MessageLoggerS STATIC ${srcFiles})
