--- a/ups/messagefacility.table.in
+++ b/ups/messagefacility.table.in
@@ -13,40 +13,40 @@ Flavor     = Linux64bit+2.6-2.5
 Qualifiers = "@qualifier@"
   Action = setup
        prodDir()
-       fileTest( ${UPS_PROD_DIR}/sl5.x86_64.@qualifier@, -d, "${UPS_PROD_DIR}/sl5.x86_64.@qualifier@ directory not found: SETUP ABORTED")
-       envSet( ${UPS_PROD_NAME_UC}_FQ, sl5.x86_64.@qualifier@ )
+       fileTest( ${UPS_PROD_DIR}/slf5.x86_64.@qualifier@, -d, "${UPS_PROD_DIR}/slf5.x86_64.@qualifier@ directory not found: SETUP ABORTED")
+       envSet( ${UPS_PROD_NAME_UC}_FQ, slf5.x86_64.@qualifier@ )
        exeActionRequired("setup__")
 
 Flavor     = Linuxppc
 Qualifiers = "@qualifier@"
   Action = setup
        prodDir()
-       fileTest( ${UPS_PROD_DIR}/sl5.PPC.@qualifier@, -d, "${UPS_PROD_DIR}/sl5.PPC.@qualifier@ directory not found: SETUP ABORTED")
-       envSet( ${UPS_PROD_NAME_UC}_FQ, sl5.PPC.@qualifier@ )
+       fileTest( ${UPS_PROD_DIR}/slf5.PPC.@qualifier@, -d, "${UPS_PROD_DIR}/slf5.PPC.@qualifier@ directory not found: SETUP ABORTED")
+       envSet( ${UPS_PROD_NAME_UC}_FQ, slf5.PPC.@qualifier@ )
        exeActionRequired("setup__")
 
 Flavor     = Linux+2.6-2.5
 Qualifiers = "@qualifier@"
   Action = setup
        prodDir()
-       fileTest( ${UPS_PROD_DIR}/sl5.i686.@qualifier@, -d, "${UPS_PROD_DIR}/sl5.i686.@qualifier@ directory not found: SETUP ABORTED")
-       envSet( ${UPS_PROD_NAME_UC}_FQ, sl5.i686.@qualifier@ )
+       fileTest( ${UPS_PROD_DIR}/slf5.i686.@qualifier@, -d, "${UPS_PROD_DIR}/slf5.i686.@qualifier@ directory not found: SETUP ABORTED")
+       envSet( ${UPS_PROD_NAME_UC}_FQ, slf5.i686.@qualifier@ )
        exeActionRequired("setup__")
 
 Flavor     = Linux64bit+2.6-2.3.4
 Qualifiers = "@qualifier@"
   Action = setup
        prodDir()
-       fileTest( ${UPS_PROD_DIR}/sl4.x86_64.@qualifier@, -d, "${UPS_PROD_DIR}/sl4.x86_64.@qualifier@ directory not found: SETUP ABORTED")
-       envSet( ${UPS_PROD_NAME_UC}_FQ, sl4.x86_64.@qualifier@ )
+       fileTest( ${UPS_PROD_DIR}/slf4.x86_64.@qualifier@, -d, "${UPS_PROD_DIR}/slf4.x86_64.@qualifier@ directory not found: SETUP ABORTED")
+       envSet( ${UPS_PROD_NAME_UC}_FQ, slf4.x86_64.@qualifier@ )
        exeActionRequired("setup__")
 
 Flavor     = Linux+2.6-2.3.4
 Qualifiers = "@qualifier@"
   Action = setup
       prodDir()
-      fileTest( ${UPS_PROD_DIR}/sl4.i686.@qualifier@, -d, "${UPS_PROD_DIR}/sl4.i686.@qualifier@ directory not found: SETUP ABORTED")
-      envSet( ${UPS_PROD_NAME_UC}_FQ, sl4.i686.@qualifier@ )
+      fileTest( ${UPS_PROD_DIR}/slf4.i686.@qualifier@, -d, "${UPS_PROD_DIR}/slf4.i686.@qualifier@ directory not found: SETUP ABORTED")
+      envSet( ${UPS_PROD_NAME_UC}_FQ, slf4.i686.@qualifier@ )
       exeActionRequired("setup__")
 
 Common:
