--- a/ups/messagefacility.table.in
+++ b/ups/messagefacility.table.in
@@ -26,6 +26,7 @@ Flavor     = Linuxppc
 Qualifiers = "@qualifier@"
   Action = setup
        prodDir()
+       setupRequired(cetbuildtools @CETBUILDTOOLS_VERSION@ @CETBUILDTOOLS_QUAL@)
        fileTest( ${UPS_PROD_DIR}/slf5.PPC.@qualifier@, -d, "${UPS_PROD_DIR}/slf5.PPC.@qualifier@ directory not found: SETUP ABORTED")
        envSet( ${UPS_PROD_NAME_UC}_FQ, slf5.PPC.@qualifier@ )
        exeActionRequired("setup__")
@@ -36,28 +37,16 @@ Common:
     envSet(${UPS_PROD_NAME_UC}_VERSION, @version@)
     prodDir( _FQ_DIR, ${${UPS_PROD_NAME_UC}_FQ} )
 
-    # define PROD_DIR_INC if there is an appropriate include subdirectory
-    if    ( sh -c 'for dd in ${${UPS_PROD_NAME_UC}_FQ}/include include;do [ -d ${UPS_PROD_DIR}/$dd ] && exit;done;exit 1' )
-        prodDir( _INC, "`sh -c 'for dd in ${${UPS_PROD_NAME_UC}_FQ}/include include;do [ -d ${UPS_PROD_DIR}/$dd ] && echo $dd && exit;done;exit 1'`" )
-    else ()
-        execute( true, NO_UPS_ENV )
-    endif ( sh -c 'for dd in ${${UPS_PROD_NAME_UC}_FQ}/include include;do [ -d ${UPS_PROD_DIR}/$dd ] && exit;done;exit 1' )
-
-    # define PROD_DIR_LIB if there is an appropriate lib subdirectory
-    if    ( sh -c 'for dd in ${${UPS_PROD_NAME_UC}_FQ}/lib lib;do [ -d ${UPS_PROD_DIR}/$dd ] && exit;done;exit 1' )
-        prodDir( _LIB, "`sh -c 'for dd in ${${UPS_PROD_NAME_UC}_FQ}/lib lib;do [ -d ${UPS_PROD_DIR}/$dd ] && echo $dd && exit;done;exit 1'`" )
-        pathPrepend(LD_LIBRARY_PATH, ${${UPS_PROD_NAME_UC}_LIB})
-    else ()
-        execute( true, NO_UPS_ENV )
-    endif ( sh -c 'for dd in ${${UPS_PROD_NAME_UC}_FQ}/lib lib;do [ -d ${UPS_PROD_DIR}/$dd ] && exit;done;exit 1' )
+    execute( "find-path include ${${UPS_PROD_NAME_UC}_FQ_DIR} ${UPS_PROD_DIR}", UPS_ENV, ${UPS_PROD_NAME_UC}_INC)
+    execute( "find-path lib ${${UPS_PROD_NAME_UC}_FQ_DIR} ${UPS_PROD_DIR}", UPS_ENV, ${UPS_PROD_NAME_UC}_LIB)
+    pathPrepend(LD_LIBRARY_PATH, ${${UPS_PROD_NAME_UC}_LIB})
 
     # add the bin directory to the path if it exists
-    if    ( sh -c 'for dd in ${${UPS_PROD_NAME_UC}_FQ}/bin bin;do [ -d ${UPS_PROD_DIR}/$dd ] && exit;done;exit 1' )
-        pathPrepend(PATH, ${UPS_PROD_DIR}/"`sh -c 'for dd in ${${UPS_PROD_NAME_UC}_FQ}/bin bin;do [ -d ${UPS_PROD_DIR}/$dd ] && echo $dd && exit;done;exit 1'`" )
-    else ()
-        execute( true, NO_UPS_ENV )
-    endif ( sh -c 'for dd in ${${UPS_PROD_NAME_UC}_FQ}/bin bin;do [ -d ${UPS_PROD_DIR}/$dd ] && exit;done;exit 1' )
-	    
+    pathPrepend(PATH, ${UPS_PROD_DIR}/bin )
+    pathPrepend(PATH, ${${UPS_PROD_NAME_UC}_FQ_DIR}/bin )
+    # dropit -E removes non-existent directories
+    Execute(dropit -E, NO_UPS_ENV, PATH)
+
        setupRequired(fhiclcpp @FHICLCPP_VERSION@ @FHICLCPP_QUAL@ )
        setupRequired(boost @BOOST_VERS@ @BOOST_QUAL@ )
     setupRequired(gcc @GCC_VERSION@ )
