need to pass flavor to get-directory-name

--- a/ups/messagefacility.table.in
+++ b/ups/messagefacility.table.in
@@ -8,8 +8,9 @@ Flavor     = ANY
 Qualifiers = ""
   Action = setup
        prodDir()
+       setupEnv()
        setupRequired(cetbuildtools @CETBUILDTOOLS_VERSION@ @CETBUILDTOOLS_QUAL@)
-       execute( "get-directory-name subdir", UPS_ENV, ${UPS_PROD_NAME_UC}_FQ )
+       execute( "get-directory-name subdir '' ${UPS_PROD_FLAVOR}", UPS_ENV, ${UPS_PROD_NAME_UC}_FQ )
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
        exeActionRequired("setup__")
 
@@ -17,23 +18,14 @@ Flavor     = ANY
 Qualifiers = "@qualifier@"
   Action = setup
        prodDir()
+       setupEnv()
        setupRequired(cetbuildtools @CETBUILDTOOLS_VERSION@ @CETBUILDTOOLS_QUAL@)
-       execute( "get-directory-name subdir @qualifier@", UPS_ENV, ${UPS_PROD_NAME_UC}_FQ )
+       execute( "get-directory-name subdir @qualifier@ ${UPS_PROD_FLAVOR}", UPS_ENV, ${UPS_PROD_NAME_UC}_FQ )
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
-       exeActionRequired("setup__")
-
-Flavor     = Linuxppc
-Qualifiers = "@qualifier@"
-  Action = setup
-       prodDir()
-       setupRequired(cetbuildtools @CETBUILDTOOLS_VERSION@ @CETBUILDTOOLS_QUAL@)
-       fileTest( ${UPS_PROD_DIR}/slf5.PPC.@qualifier@, -d, "${UPS_PROD_DIR}/slf5.PPC.@qualifier@ directory not found: SETUP ABORTED")
-       envSet( ${UPS_PROD_NAME_UC}_FQ, slf5.PPC.@qualifier@ )
        exeActionRequired("setup__")
 
 Common:
   Action = setup__
-    setupEnv()
     envSet(${UPS_PROD_NAME_UC}_VERSION, @version@)
     prodDir( _FQ_DIR, ${${UPS_PROD_NAME_UC}_FQ} )
 
