--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@
 #
 #  CMake build file for project MessageFacility
 #
-#   cmake [-DCMAKE_INSTALL_PREFIX=/install/path] 
+#   cmake [-DCMAKE_INSTALL_PREFIX=/install/path]
 #         [-DCMAKE_TOOLCHAIN_FILE=/path/to/toolchain/file]
 #         /path/to/source/code
 
@@ -24,9 +24,9 @@
 cmake_minimum_required (VERSION 2.6)
 # project name
 project(MessageFacility)
-# the ups convention is that product names are all lower case, but this is a choices
+# the ups convention is that product names are all lower case, but this is a choice
 SET (product messagefacility)
-SET (version v1_08_25)
+SET (version v1_09_00)
 SET (qualifier a2)
 
 # cetbuildtools contains our cmake modules
@@ -81,13 +81,13 @@ message(STATUS "GCC version is ${GCC_VERSION} " )
 
 # We want to be able to #include "MyProduct/MyHeader.h" in source code,
 # generated code, and user code.
-# We achieve this by putting all headers into a MyProduct subdirectory  
-# instead of an include subdirectory.  
+# We achieve this by putting all headers into a MyProduct subdirectory
+# instead of an include subdirectory.
 # PROJECT_SOURCE_DIR is a cmake variable which points to the top of the
 # source code tree.
 include_directories ("${PROJECT_SOURCE_DIR}")
 
-# Generated code will be created in the build directory, 
+# Generated code will be created in the build directory,
 # so we also add PROJECT_BINARY_DIR to the include search path.
 # This step may be omitted if there are no generated headers.
 include_directories ("${PROJECT_BINARY_DIR}")
@@ -100,8 +100,8 @@ find_library( CETLIB NAMES cetlib PATHS $ENV{CETLIB_LIB} )
 # define FHICLCPP
 find_library( FHICLCPP NAMES fhiclcpp PATHS $ENV{FHICLCPP_LIB} )
 
-# Building  all libraries and binaries in a single lib and bin directory 
-# is useful for a complex product like art.  
+# Building  all libraries and binaries in a single lib and bin directory
+# is useful for a complex product like art.
 # You may not want to do this for smaller products.
 
 #build all libraries in a single directory
