../../test/Integration/CMakeLists.txt
Correct spelling typos.

--- a/test/Integration/MessageFacility.cfg
+++ b/test/Integration/MessageFacility.cfg
@@ -12,7 +12,7 @@ MessageFacility : {
             type : "cout",
             # threshold for this destination
             threshold : "DEBUG",
-            # filtering based on categoreis
+            # filtering based on categories
             categories :
             {
                 default : { limit : -1 }
