Use ENABLE_ASSERTS to protect use of assert in tests.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+cet_set_compiler_flags(ENABLE_ASSERTS DIAGS VIGILANT EXTRA_FLAGS -pedantic)
+
 subdirs(Utilities)
 subdirs(Integration)
 #subdirs(MessageService)
