using cetbuildtools v1_14_01 and cetpkgsupport

--- a/ups/messagefacility.table.in
+++ b/ups/messagefacility.table.in
@@ -15,10 +15,10 @@ Qualifiers = ""
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
 
   Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ @FHICLCPP_BASE_QUAL@ )
-    setupRequired(cetlib @CETLIB_VERSION@ @CETLIB_BASE_QUAL@)
-    setupRequired(cpp0x @CPP0X_VERSION@ @CPP0X_BASE_QUAL@)
-    setupRequired(boost @BOOST_VERS@ @BOOST_BASE_QUAL@)
+    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@ )
+    setupRequired(cetlib @CETLIB_VERSION@ -q @CETLIB_BASE_QUAL@)
+    setupRequired(cpp0x @CPP0X_VERSION@ -q @CPP0X_BASE_QUAL@)
+    setupRequired(boost @BOOST_VERS@ -q @BOOST_BASE_QUAL@)
 
 Flavor     = ANY
 Qualifiers = "@qualifier@"
@@ -30,10 +30,10 @@ Qualifiers = "@qualifier@"
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
 
   Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ @FHICLCPP_BASE_QUAL@ )
-    setupRequired(cetlib @CETLIB_VERSION@ @CETLIB_BASE_QUAL@)
-    setupRequired(cpp0x @CPP0X_VERSION@ @CPP0X_BASE_QUAL@)
-    setupRequired(boost @BOOST_VERS@ @BOOST_BASE_QUAL@)
+    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@ )
+    setupRequired(cetlib @CETLIB_VERSION@ -q @CETLIB_BASE_QUAL@)
+    setupRequired(cpp0x @CPP0X_VERSION@ -q @CPP0X_BASE_QUAL@)
+    setupRequired(boost @BOOST_VERS@ -q @BOOST_BASE_QUAL@)
 
 Flavor     = ANY
 Qualifiers = "@qualifier@:debug"
@@ -45,10 +45,10 @@ Qualifiers = "@qualifier@:debug"
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
 
   Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ @FHICLCPP_BASE_QUAL@:debug )
-    setupRequired(cetlib @CETLIB_VERSION@ @CETLIB_BASE_QUAL@:debug)
-    setupRequired(cpp0x @CPP0X_VERSION@ @CPP0X_BASE_QUAL@:debug)
-    setupRequired(boost @BOOST_VERS@ @BOOST_BASE_QUAL@:debug)
+    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:debug )
+    setupRequired(cetlib @CETLIB_VERSION@ -q @CETLIB_BASE_QUAL@:debug)
+    setupRequired(cpp0x @CPP0X_VERSION@ -q @CPP0X_BASE_QUAL@:debug)
+    setupRequired(boost @BOOST_VERS@ -q @BOOST_BASE_QUAL@:debug)
 
 Flavor     = ANY
 Qualifiers = "@qualifier@:opt"
@@ -60,10 +60,10 @@ Qualifiers = "@qualifier@:opt"
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
 
   Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ @FHICLCPP_BASE_QUAL@:opt )
-    setupRequired(cetlib @CETLIB_VERSION@ @CETLIB_BASE_QUAL@:opt)
-    setupRequired(cpp0x @CPP0X_VERSION@ @CPP0X_BASE_QUAL@:opt)
-    setupRequired(boost @BOOST_VERS@ @BOOST_BASE_QUAL@:opt)
+    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:opt )
+    setupRequired(cetlib @CETLIB_VERSION@ -q @CETLIB_BASE_QUAL@:opt)
+    setupRequired(cpp0x @CPP0X_VERSION@ -q @CPP0X_BASE_QUAL@:opt)
+    setupRequired(boost @BOOST_VERS@ -q @BOOST_BASE_QUAL@:opt)
 
 Flavor     = ANY
 Qualifiers = "@qualifier@:prof"
@@ -75,15 +75,16 @@ Qualifiers = "@qualifier@:prof"
        fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
 
   Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ @FHICLCPP_BASE_QUAL@:prof )
-    setupRequired(cetlib @CETLIB_VERSION@ @CETLIB_BASE_QUAL@:prof)
-    setupRequired(cpp0x @CPP0X_VERSION@ @CPP0X_BASE_QUAL@:prof)
-    setupRequired(boost @BOOST_VERS@ @BOOST_BASE_QUAL@:prof)
+    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:prof )
+    setupRequired(cetlib @CETLIB_VERSION@ -q @CETLIB_BASE_QUAL@:prof)
+    setupRequired(cpp0x @CPP0X_VERSION@ -q @CPP0X_BASE_QUAL@:prof)
+    setupRequired(boost @BOOST_VERS@ -q @BOOST_BASE_QUAL@:prof)
 
 Common:
   Action = setup
     prodDir()
     setupEnv()
+    setupRequired(cetpkgsupport)
     exeActionRequired(GetFQDir)
     envSet(${UPS_PROD_NAME_UC}_VERSION, @version@)
     prodDir( _FQ_DIR, ${${UPS_PROD_NAME_UC}_FQ} )
