--- a/messagefacility/CMakeLists.txt
+++ b/messagefacility/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-subdirs(Extensions)
-subdirs(MessageLogger)
-#subdirs(MessageService)
-subdirs(Utilities)
+add_subdirectory(Extensions)
+add_subdirectory(MessageLogger)
+#add_subdirectory(MessageService)
+add_subdirectory(Utilities)
