Extra safety in table file for setup.

--- a/ups/messagefacility.table.in
+++ b/ups/messagefacility.table.in
@@ -6,31 +6,7 @@ Group:
 
 
 Flavor     = ANY
-Qualifiers = ""
-
-  Action = GetFQDir
-       # faking out unsetup
-       envSet( ${UPS_PROD_NAME_UC}_FQ, "" )
-       execute( "get-directory-name subdir '' ${UPS_PROD_FLAVOR}", UPS_ENV, ${UPS_PROD_NAME_UC}_FQ )
-       fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
-
-  Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@ )
-
-Flavor     = ANY
-Qualifiers = "a5"
-
-  Action = GetFQDir
-       # faking out unsetup
-       envSet( ${UPS_PROD_NAME_UC}_FQ, "" )
-       execute( "get-directory-name subdir a5 ${UPS_PROD_FLAVOR}", UPS_ENV, ${UPS_PROD_NAME_UC}_FQ )
-       fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
-
-  Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@ )
-
-Flavor     = ANY
-Qualifiers = "a5:debug"
+Qualifiers = "+a5:+debug"
 
   Action = GetFQDir
        # faking out unsetup
@@ -42,7 +18,7 @@ Qualifiers = "a5:debug"
     setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:debug )
 
 Flavor     = ANY
-Qualifiers = "a5:opt"
+Qualifiers = "+a5:+opt"
 
   Action = GetFQDir
        # faking out unsetup
@@ -54,7 +30,7 @@ Qualifiers = "a5:opt"
     setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:opt )
 
 Flavor     = ANY
-Qualifiers = "a5:prof"
+Qualifiers = "+a5:+prof"
 
   Action = GetFQDir
        # faking out unsetup
@@ -66,19 +42,7 @@ Qualifiers = "a5:prof"
     setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:prof )
 
 Flavor     = ANY
-Qualifiers = "e1"
-
-  Action = GetFQDir
-       # faking out unsetup
-       envSet( ${UPS_PROD_NAME_UC}_FQ, "" )
-       execute( "get-directory-name subdir e1 ${UPS_PROD_FLAVOR}", UPS_ENV, ${UPS_PROD_NAME_UC}_FQ )
-       fileTest( ${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ}, -d, "${UPS_PROD_DIR}/${${UPS_PROD_NAME_UC}_FQ} directory not found: SETUP ABORTED")
-
-  Action = GetExtraProducts
-    setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@ )
-
-Flavor     = ANY
-Qualifiers = "e1:debug"
+Qualifiers = "+e1:+debug"
 
   Action = GetFQDir
        # faking out unsetup
@@ -90,7 +54,7 @@ Qualifiers = "e1:debug"
     setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:debug )
 
 Flavor     = ANY
-Qualifiers = "e1:opt"
+Qualifiers = "+e1:+opt"
 
   Action = GetFQDir
        # faking out unsetup
@@ -102,7 +66,7 @@ Qualifiers = "e1:opt"
     setupRequired(fhiclcpp @FHICLCPP_VERSION@ -q @FHICLCPP_BASE_QUAL@:opt )
 
 Flavor     = ANY
-Qualifiers = "e1:prof"
+Qualifiers = "+e1:+prof"
 
   Action = GetFQDir
        # faking out unsetup
